Test experienced pt route
Signed-off-by: Janek Laudan <laudan@simunto.com>